<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game of Life</string>
    <string name="action_settings">Settings</string>
    <string name="percentage_filled">% Filled</string>
    <string name="action_title_lock_canvas">Canvas Lock</string>
    <string name="action_title_play">Play</string>
    <string name="action_title_pause">Pause</string>
    <string name="action_title_random">Random Fill</string>
    <string name="action_title_clear">Clear</string>
    <string name="action_title_faster">Faster</string>
    <string name="action_title_slower">Slower</string>
    <string name="action_title_help">Help</string>
    <string name="dialog_title_rule_picker">Select Game Rules</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_title_game_rules">Game Rules</string>
    <string name="text_check_aa">Antialias (Check this box for prettier graphics, uncheck for better performance and frame rate)</string>
    <string name="app_settings">Settings</string>
    <string name="title_button_rules">Set game rules</string>
    <string name="settings_text_game_settings">Game Settings</string>
    <string name="settings_text_graphics_settings">Graphics Settings</string>
    <string name="radio_swipe_circular">Circular</string>
    <string name="radio_swipe_rectangular">Rectangular</string>
    <string name="settings_text_title_radio_group_swipe_trail">Set swipe trail type for touch inputs</string>
    <string name="dialog_checkbox_title_never_show">Don\'t show this again.</string>
    <string name="text_swipe_width">Set width of swipe trail</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_text_survival_rule">Survival Rule</string>
    <string name="dialog_text_birth_rule">Birth Rule</string>

</resources>