<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_bright"
            android:minHeight="1dp" />

        <Button
            android:id="@+id/button_rule_picker"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="@string/title_button_rules" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_bright"
            android:minHeight="1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_text_title_radio_group_swipe_trail"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_group_swipe_trail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_swipe_circular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_swipe_circular" />

            <RadioButton
                android:id="@+id/radio_swipe_rectangular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_swipe_rectangular" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_bright"
            android:minHeight="1dp" />

    </LinearLayout>

</ScrollView>